fix: Alignment for inputs

--- a/src/components/input-frame/input-frame.mat.styl
+++ b/src/components/input-frame/input-frame.mat.styl
@@ -75,7 +75,6 @@
 
 .q-if-control
   cursor pointer
-  margin-left 4px
   color rgba(0, 0, 0, .54)
   font-size 24px
   &:hover
